--- a/Part.1.E.1.entrance.ipynb
+++ b/Part.1.E.1.entrance.ipynb
@@ -280,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "693 is odd.\n"
+      "144 is even.\n"
      ]
     }
    ],
@@ -343,25 +343,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
       "1\n",
+      "answer 1\n",
+      "2\n",
       "3\n",
+      "answer 3\n",
+      "4\n",
       "5\n",
+      "answer 5\n",
+      "6\n",
       "7\n",
-      "9\n"
+      "answer 7\n",
+      "8\n",
+      "9\n",
+      "answer 9\n"
      ]
     }
    ],
    "source": [
     "for i in range(10):\n",
+    "    print(i)\n",
     "    if i % 2 != 0:\n",
-    "        print(i)"
+    "        print('answer', i)"
    ]
   },
   {
