--- a/Part.1.E.2.values-and-their-operators.ipynb
+++ b/Part.1.E.2.values-and-their-operators.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -747,7 +747,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -757,7 +757,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,6 +770,7 @@
     "b_list = [1, 2, 3, 5]\n",
     "c_list = ['ann', 'bob', 'cindy', 'dude', 'eric']\n",
     "a_list > b_list\n",
+    "#a_list > c_list\n",
     "10 not in a_list\n",
     "'ann' in c_list"
    ]
@@ -896,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +906,7 @@
        "(3537118815677477, 1125899906842624)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1019,7 @@
        "[1, 2, 3, 4, 5, 6, 7]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1028,7 +1029,7 @@
        "{1, 2, 3, 4, 5, 6, 7}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1038,7 +1039,7 @@
        "[1, 2, 3, 4, 5, 6, 7]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
