--- a/Part.1.E.3.controlflow.ipynb
+++ b/Part.1.E.3.controlflow.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -441,44 +441,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "11\n",
-      "13\n",
-      "17\n",
-      "19\n",
-      "23\n",
-      "29\n",
-      "31\n",
-      "37\n",
-      "41\n",
-      "43\n",
-      "47\n",
-      "53\n",
-      "59\n",
-      "61\n",
-      "67\n",
-      "71\n",
-      "73\n",
-      "79\n",
-      "83\n",
-      "89\n",
-      "97\n"
+      "line1:  2\n",
+      "line2:  3\n",
+      "line2:  5\n",
+      "line2:  7\n",
+      "line2:  11\n",
+      "line2:  13\n",
+      "line2:  17\n",
+      "line2:  19\n",
+      "line2:  23\n",
+      "line2:  29\n",
+      "line2:  31\n",
+      "line2:  37\n",
+      "line2:  41\n",
+      "line2:  43\n",
+      "line2:  47\n",
+      "line2:  53\n",
+      "line2:  59\n",
+      "line2:  61\n",
+      "line2:  67\n",
+      "line2:  71\n",
+      "line2:  73\n",
+      "line2:  79\n",
+      "line2:  83\n",
+      "line2:  89\n",
+      "line2:  97\n"
      ]
     }
    ],
    "source": [
     "for n in range(2, 100):\n",
     "    if n == 2:\n",
-    "        print(n)\n",
+    "        print(f'line1: {n}')\n",
     "        continue\n",
     "    for i in range(2, n):\n",
     "        if (n % i) == 0:\n",
     "            break\n",
     "    else:               # 下一行的 print(n) 事实上属于语句块 for i in range(2, n):\n",
-    "        print(n)        # 整个循环结束，都没有发生 break 的情况下，才执行一次 print(n)"
+    "        print(f'line2: {n}') # 整个循环结束，都没有发生 break 的情况下，才执行一次 print(n)"
    ]
   },
   {
@@ -490,24 +490,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line1: 2\n",
+      "line2: 3\n",
+      "line2: 4\n",
+      "line2: 5\n",
+      "line2: 6\n",
+      "line2: 7\n",
+      "line2: 8\n",
+      "line2: 9\n",
+      "line2: 10\n",
+      "line2: 11\n",
+      "line2: 12\n",
+      "line2: 13\n",
+      "line2: 14\n",
+      "line2: 15\n",
+      "line2: 16\n",
+      "line2: 17\n",
+      "line2: 18\n",
+      "line2: 19\n",
+      "line2: 20\n",
+      "line2: 21\n",
+      "line2: 22\n",
+      "line2: 23\n",
+      "line2: 24\n",
+      "line2: 25\n",
+      "line2: 26\n",
+      "line2: 27\n",
+      "line2: 28\n",
+      "line2: 29\n",
+      "line2: 30\n",
+      "line2: 31\n",
+      "line2: 32\n",
+      "line2: 33\n",
+      "line2: 34\n",
+      "line2: 35\n",
+      "line2: 36\n",
+      "line2: 37\n",
+      "line2: 38\n",
+      "line2: 39\n",
+      "line2: 40\n",
+      "line2: 41\n",
+      "line2: 42\n",
+      "line2: 43\n",
+      "line2: 44\n",
+      "line2: 45\n",
+      "line2: 46\n",
+      "line2: 47\n",
+      "line2: 48\n",
+      "line2: 49\n",
+      "line2: 50\n",
+      "line2: 51\n",
+      "line2: 52\n",
+      "line2: 53\n",
+      "line2: 54\n",
+      "line2: 55\n",
+      "line2: 56\n",
+      "line2: 57\n",
+      "line2: 58\n",
+      "line2: 59\n",
+      "line2: 60\n",
+      "line2: 61\n",
+      "line2: 62\n",
+      "line2: 63\n",
+      "line2: 64\n",
+      "line2: 65\n",
+      "line2: 66\n",
+      "line2: 67\n",
+      "line2: 68\n",
+      "line2: 69\n",
+      "line2: 70\n",
+      "line2: 71\n",
+      "line2: 72\n",
+      "line2: 73\n",
+      "line2: 74\n",
+      "line2: 75\n",
+      "line2: 76\n",
+      "line2: 77\n",
+      "line2: 78\n",
+      "line2: 79\n",
+      "line2: 80\n",
+      "line2: 81\n",
+      "line2: 82\n",
+      "line2: 83\n",
+      "line2: 84\n",
+      "line2: 85\n",
+      "line2: 86\n",
+      "line2: 87\n",
+      "line2: 88\n",
+      "line2: 89\n",
+      "line2: 90\n",
+      "line2: 91\n",
+      "line2: 92\n",
+      "line2: 93\n",
+      "line2: 94\n",
+      "line2: 95\n",
+      "line2: 96\n",
+      "line2: 97\n",
+      "line2: 98\n",
+      "line2: 99\n"
+     ]
+    }
+   ],
    "source": [
     "for n in range(2, 100):\n",
     "    if n == 2:\n",
-    "        print(n)\n",
+    "        print(f'line1: {n}')\n",
     "        continue\n",
     "    for i in range(2, n):\n",
     "        if (n % i) == 0:\n",
-    "            break\n",
-    "    print(n)            # 事实上相当于针对 range(2, 100) 中每个 n 都执行了一次 print(n)\n",
+    "            break         #print不在这个内嵌for loop之内，而在大for loop之内\n",
+    "    print(f'line2: {n}')  # 事实上相当于针对 range(2, 100) 中每个 n 都执行了一次 print(n)\n",
     "                        # 这个 print(n) 属于语句块 for n in range(2, 100): "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1586,7 +1691,7 @@
     "        continue\n",
     "    for i in range(2, n):\n",
     "        if (n % i) == 0:\n",
-    "            break\n",
+    "            break     #这个break, break的是if条件，如果取余为0则if结束。print在for loop之内\n",
     "        print(n)            # 事实上相当于针对 range(2, n) 中每个 i 都执行了一次 print(n)"
    ]
   },
@@ -1646,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1768,7 @@
     "while a < n:\n",
     "    print(a, end=' ')\n",
     "    a, b = b, a+b\n",
-    "print()"
+    "print()    # ？这行似乎可以不要啊~"
    ]
   },
   {
@@ -1712,9 +1817,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You: 10\t Bot: 10\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your bet?  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dice is 7;\n",
+      "DRAW!\n",
+      "\n",
+      "You: 10\t Bot: 10\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your bet?  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dice is 6;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 9\t Bot: 11\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your bet?  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dice is 5;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 8\t Bot: 12\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your bet?  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dice is 11;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 9\t Bot: 11\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your bet?  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dice is 10;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 10\t Bot: 10\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your bet?  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dice is 9;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 11\t Bot: 9\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your bet?  b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dice is 4;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 10\t Bot: 10\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your bet?  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You've played 7 rounds.\n",
+      "\n",
+      "You have 10 coins now.\n",
+      "Bye!\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randrange\n",
     "\n",
