--- a/Part.1.E.4.functions.ipynb
+++ b/Part.1.E.4.functions.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
    "source": [
     "print('line 1st')\n",
     "print('line 2nd')\n",
-    "print()\n",
+    "print()  #oh...\n",
     "print('line 4th')"
    ]
   },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "['a', 'b', 'c', 'd']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,7 +318,7 @@
        "['d', 'c', 'b', 'a']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "8"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -480,7 +480,17 @@
        "0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +500,8 @@
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
     "pow(2, 3)\n",
-    "pow(2, 3, 4)"
+    "pow(2, 3, 4)\n",
+    "pow(2, 3, 3)"
    ]
   },
   {
@@ -680,6 +691,13 @@
     "\n",
     "<a href='#fn1b'><small>↑Back to Content↑</small></a>\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
