--- a/Part.1.E.7.files.ipynb
+++ b/Part.1.E.7.files.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -328,11 +328,8 @@
      "output_type": "stream",
      "text": [
       "first line\n",
-      "\n",
       "second line\n",
-      "\n",
-      "third line\n",
-      "\n"
+      "third line\n"
      ]
     }
    ],
@@ -344,7 +341,7 @@
     "\n",
     "f = open('/tmp/test-file.txt', 'r')\n",
     "for line in f.readlines():\n",
-    "    print(line)\n",
+    "    print(line.strip())\n",
     "f.close()"
    ]
   },
