--- a/Part.1.E.5.strings.ipynb
+++ b/Part.1.E.5.strings.ipynb
@@ -2471,7 +2471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2480,17 @@
        "'John is 25 years old.'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'25 is John years old.'"
+      ]
+     },
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2490,7 +2500,7 @@
        "'Are you John? :-{+}'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2500,7 +2510,7 @@
        "'John is a grown up? True'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2515,7 +2525,7 @@
     "# 不写占位符索引就默认每个占位符的索引从第一个开始是 0, 1, 2 ...（占位符数量 - 1)\n",
     "# '{} {}'.format(a, b) 和 '{0} {1}'.format(a, b) 是一样的。\n",
     "\n",
-    "# '{0} is {2} years old.'.format(name, age)\n",
+    "'{1} is {0} years old.'.format(name, age)\n",
     "# 这一句会报错，因为 2 超出实际参数索引极限\n",
     "\n",
     "# 两个连续使用的大括号，不被认为是占位符；且只打印出一对大括号\n",
