finished 1st read

--- a/Part.2.D.2-aargs.ipynb
+++ b/Part.2.D.2-aargs.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,10 @@
      "text": [
       "Hi, mike!\n",
       "Hi, john!\n",
-      "Hi, zeo!\n"
+      "Hi, zeo!\n",
+      "Hi, hatti!\n",
+      "Hi, kirsty!\n",
+      "Hi, lesley!\n"
      ]
     }
    ],
@@ -89,7 +92,8 @@
     "        print(f'Hi, {name}!')\n",
     "\n",
     "names = ('mike', 'john', 'zeo')\n",
-    "say_hi(*names)"
+    "say_hi(*names)\n",
+    "say_hi('hatti', 'kirsty', 'lesley')"
    ]
   },
   {
@@ -428,12 +432,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "但 `greeting` 这个参数虽然有默认值，可这个函数在被调用的时候，还是必须要给出这个参数，否则输出结果出乎你的想象："
+    "但 `greeting` 这个_参数虽然有默认值，可这个函数在被调用的时候，还是必须要给出这个参数_，否则输出结果出乎你的想象："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +456,7 @@
     "            name = name.capitalize()\n",
     "        print(f'{greeting}, {name}!')\n",
     "\n",
-    "say_hi('mike', 'john', 'zeo')"
+    "say_hi('mike', 'john', 'zeo')  #'hello'要占好位置！！！"
    ]
   },
   {
