--- a/Part.2.D.3-lambda.ipynb
+++ b/Part.2.D.3-lambda.ipynb
@@ -247,32 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "42"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": [
        "43"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def make_incrementor(n):\n",
+    "def make_incrementor(n):  #incrementor增量器\n",
     "    return lambda x: x + n\n",
     "\n",
     "f = make_incrementor(42)\n",
@@ -532,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -541,16 +531,38 @@
        "[(4, 'four'), (1, 'one'), (3, 'three'), (2, 'two')]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['four', 'one', 'three', 'two']"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "\n",
     "pairs = [(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]\n",
-    "pairs.sort(key=lambda p: p[1])\n",
-    "pairs"
+    "pairs.sort(key=lambda p: p[1])  #按照pair位置为1的值排序，如果是0，则按1234顺序排列\n",
+    "pairs\n",
+    "\n",
+    "list(map(lambda p: p[1],pairs))  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
