--- a/Part.2.D.7-tdd.ipynb
+++ b/Part.2.D.7-tdd.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,7 +174,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -184,7 +184,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -194,7 +194,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
     "def is_leap(year):\n",
-    "    r = False\n",
+    "    r = False  #我：先设定全部都是false，都不是闰年\n",
     "    return r\n",
     "\n",
     "is_leap(4) is True\n",
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "False"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
