--- a/Part.2.D.8-main.ipynb
+++ b/Part.2.D.8-main.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "当一个模块（其实就是存有 Python 代码的 `.py` 文件，例如：`mycode.py`）被 `import` 语句导入的时候，这个模块的 `__name__` 就是模块名（例如：`'mycode'`）。\n",
     "\n",
-    "而当一个模块被命令行运行的时候，这个模块的 `__name__` 就被 Python 解释器设定为 `'__main__'`。\n",
+    "* 而当一个模块被命令行运行的时候，这个模块的 `__name__` 就被 *Python 解释器*设定为 `'__main__'`。*（没太懂这句。。）*\n",
     "\n",
     "把一个程序整个封装到 `main()` 之中，而后在模块代码里加上：\n",
     "\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
