--- a/Part.3.B.2.classes-2.ipynb
+++ b/Part.3.B.2.classes-2.ipynb
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -581,7 +581,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -591,7 +591,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -601,17 +601,17 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -621,7 +621,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -631,7 +631,7 @@
        "10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -641,7 +641,7 @@
        "11"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -651,7 +651,7 @@
        "10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -661,7 +661,7 @@
        "10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -671,7 +671,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
     "    def __init__(self, name=None):\n",
     "        self.name = name\n",
     "        self.built_year = datetime.date.today().year\n",
-    "        self.__active = True\n",
+    "        self._active = True\n",
     "        Golem.population += 1          # 执行一遍之后，试试把这句改成 population += 1\n",
     "    \n",
     "    def say_hi(self):\n",
@@ -701,14 +701,14 @@
     "    def is_active(self):\n",
     "        if datetime.date.today().year - self.built_year >= Golem.__life_span:\n",
     "            self.cease()\n",
-    "        return self.__active\n",
+    "        return self._active\n",
     "\n",
     "g = Golem()\n",
     "hasattr(Golem, 'population')      # True\n",
     "hasattr(g, 'population')          # True\n",
     "hasattr(Golem, '__life_span')     # False\n",
     "hasattr(g, '__life_span')         # False\n",
-    "hasattr(g, '__active')            # False\n",
+    "hasattr(g, '_active')            # False\n",
     "Golem.population                  # 1\n",
     "setattr(Golem, 'population', 10) \n",
     "Golem.population                  # 10\n",
@@ -791,16 +791,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Golem.population of <__main__.Golem object at 0x1068da160>>"
+       "<bound method Golem.population of <__main__.Golem object at 0x111237f60>>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -810,7 +810,7 @@
        "1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
