--- a/Part.3.B.3.decorator-iterator-generator.ipynb
+++ b/Part.3.B.3.decorator-iterator-generator.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "str_iterator"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -86,7 +86,7 @@
        "tuple_iterator"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,7 +96,17 @@
        "list_iterator"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<list_iterator at 0x10c983f28>"
+      ]
+     },
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +120,8 @@
     "s = iter((1, 2, 3, 4, 5))\n",
     "type(s)\n",
     "L = iter(['item 1', 'item 2', 3, 5])\n",
-    "type(L)"
+    "type(L)\n",
+    "L"
    ]
   },
   {
@@ -724,7 +735,7 @@
     "        print('We can do sth. before a func is called...')\n",
     "        func()\n",
     "        print('... and we can do sth. after it is called...')\n",
-    "    return wrapper()\n",
+    "    return wrapper() #返回的一个函数的调用 wrapper() 而不是 wrapper 这个函数本身\n",
     "\n",
     "def a_func():\n",
     "    print(\"Hi, I'm a_func!\")\n",
@@ -966,7 +977,7 @@
     "def an_output():\n",
     "...\n",
     "```\n",
-    "装饰器的执行顺序是 “自下而上” —— 其实是 “由里到外” 更为准确。体会一下。\n"
+    "装饰器的执行顺序是 “自下而上” —— 其实是 “由里到外” 更为准确。体会一下。*#里层执行完再外层*\n"
    ]
   },
   {
