--- a/Q.good-communiation.ipynb
+++ b/Q.good-communiation.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "如果你必须有 `11` 个重点，那怎么办？那就把它们分到最多 3 个分组中，比如，像当前文章这样，“入门”、“进阶”、“高级”……\n",
     "\n",
-    "另外一个策略，是与 “递进” 的逻辑关系组合使用的 —— 你要区分针对你所谓的重点，对方的已知状态。大家都知道的，何必当作重点？于是，未知程度最高的，放在未知程度不那么高的重点后面。\n",
+    "另外一个策略，是与 “递进” 的逻辑关系组合使用的 —— 你*要区分针对你所谓的重点，对方的已知状态*。大家都知道的，何必当作重点？于是，未知程度最高的，放在未知程度不那么高的重点后面。\n",
     "\n",
     "这都是听起来无比简单，甚至好像 “无需讲述” 的 “重点”，但若是你多观察一下周遭的世界，你就明白了，很多人可能并不是不知道这些方法，但不知道为什么，他们就是不去应用这么简单有效的方法，也是怪得很！"
    ]
@@ -228,7 +228,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10a2272b0>"
+       "<IPython.lib.display.IFrame at 0x1116e04e0>"
       ]
      },
      "execution_count": 1,
@@ -280,7 +280,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10a227710>"
+       "<IPython.lib.display.IFrame at 0x1116e08d0>"
       ]
      },
      "execution_count": 2,
@@ -350,7 +350,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10a2276a0>"
+       "<IPython.lib.display.IFrame at 0x1116e0828>"
       ]
      },
      "execution_count": 3,
@@ -414,7 +414,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10a227828>"
+       "<IPython.lib.display.IFrame at 0x1116e0978>"
       ]
      },
      "execution_count": 4,
