--- a/Part.2.D.6-modules.ipynb
+++ b/Part.2.D.6-modules.ipynb
@@ -149,9 +149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/zhangxianyu/the-craft-of-selfteaching',\n",
+       " '/anaconda3/lib/python37.zip',\n",
+       " '/anaconda3/lib/python3.7',\n",
+       " '/anaconda3/lib/python3.7/lib-dynload',\n",
+       " '',\n",
+       " '/anaconda3/lib/python3.7/site-packages',\n",
+       " '/anaconda3/lib/python3.7/site-packages/IPython/extensions',\n",
+       " '/Users/zhangxianyu/.ipython']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path"
@@ -454,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -498,9 +516,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "s = \"\"\"Gur Mra bs Clguba, ol Gvz Crgref\n",
     "Ornhgvshy vf orggre guna htyl.\n",
@@ -540,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -602,17 +647,37 @@
        " 'z': 'm'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "\"Gur Mra bs Clguba, ol Gvz Crgref\\n\\nOrnhgvshy vf orggre guna htyl.\\nRkcyvpvg vf orggre guna vzcyvpvg.\\nFvzcyr vf orggre guna pbzcyrk.\\nPbzcyrk vf orggre guna pbzcyvpngrq.\\nSyng vf orggre guna arfgrq.\\nFcnefr vf orggre guna qrafr.\\nErnqnovyvgl pbhagf.\\nFcrpvny pnfrf nera'g fcrpvny rabhtu gb oernx gur ehyrf.\\nNygubhtu cenpgvpnyvgl orngf chevgl.\\nReebef fubhyq arire cnff fvyragyl.\\nHayrff rkcyvpvgyl fvyraprq.\\nVa gur snpr bs nzovthvgl, ershfr gur grzcgngvba gb thrff.\\nGurer fubhyq or bar-- naq cersrenoyl bayl bar --boivbhf jnl gb qb vg.\\nNygubhtu gung jnl znl abg or boivbhf ng svefg hayrff lbh'er Qhgpu.\\nAbj vf orggre guna arire.\\nNygubhtu arire vf bsgra orggre guna *evtug* abj.\\nVs gur vzcyrzragngvba vf uneq gb rkcynva, vg'f n onq vqrn.\\nVs gur vzcyrzragngvba vf rnfl gb rkcynva, vg znl or n tbbq vqrn.\\nAnzrfcnprf ner bar ubaxvat terng vqrn -- yrg'f qb zber bs gubfr!\""
+       "['Gur Mra bs Clguba, ol Gvz Crgref',\n",
+       " '',\n",
+       " 'Ornhgvshy vf orggre guna htyl.',\n",
+       " 'Rkcyvpvg vf orggre guna vzcyvpvg.',\n",
+       " 'Fvzcyr vf orggre guna pbzcyrk.',\n",
+       " 'Pbzcyrk vf orggre guna pbzcyvpngrq.',\n",
+       " 'Syng vf orggre guna arfgrq.',\n",
+       " 'Fcnefr vf orggre guna qrafr.',\n",
+       " 'Ernqnovyvgl pbhagf.',\n",
+       " \"Fcrpvny pnfrf nera'g fcrpvny rabhtu gb oernx gur ehyrf.\",\n",
+       " 'Nygubhtu cenpgvpnyvgl orngf chevgl.',\n",
+       " 'Reebef fubhyq arire cnff fvyragyl.',\n",
+       " 'Hayrff rkcyvpvgyl fvyraprq.',\n",
+       " 'Va gur snpr bs nzovthvgl, ershfr gur grzcgngvba gb thrff.',\n",
+       " 'Gurer fubhyq or bar-- naq cersrenoyl bayl bar --boivbhf jnl gb qb vg.',\n",
+       " \"Nygubhtu gung jnl znl abg or boivbhf ng svefg hayrff lbh'er Qhgpu.\",\n",
+       " 'Abj vf orggre guna arire.',\n",
+       " 'Nygubhtu arire vf bsgra orggre guna *evtug* abj.',\n",
+       " \"Vs gur vzcyrzragngvba vf uneq gb rkcynva, vg'f n onq vqrn.\",\n",
+       " 'Vs gur vzcyrzragngvba vf rnfl gb rkcynva, vg znl or n tbbq vqrn.',\n",
+       " \"Anzrfcnprf ner bar ubaxvat terng vqrn -- yrg'f qb zber bs gubfr!\"]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +688,7 @@
     "\n",
     "import this\n",
     "this.d\n",
-    "this.s"
+    "this.s.split('\\n')  #strip是默认去除空格；split用于拆分。"
    ]
   },
   {
@@ -653,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +736,7 @@
        " 'say_hi']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
