--- a/Part.1.E.2.values-and-their-operators.ipynb
+++ b/Part.1.E.2.values-and-their-operators.ipynb
@@ -953,7 +953,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "这是因为 Python 将 `True` 定义为：\n",
+    "这是因为 Python 将 ***True*** 定义为：\n",
     "\n",
     "> By default, an object is considered true unless its class defines either a \\_\\_bool\\_\\_() method that returns `False` or a \\_\\_len\\_\\_() method that returns zero, when called with the object.\n",
     ">\n",
@@ -971,7 +971,7 @@
     "\n",
     "于是，这么理解就轻松了：\n",
     "\n",
-    "> 每个变量或者常量，除了它们的值之外，同时还相当于有一个对应的布尔值。\n"
+    "> 每个变量或者常量，除了它们的值之外，同时还相当于有一个对应的布尔值。***（重点！！！）***\n"
    ]
   },
   {
